in fusionnpy, made carnelEnergy

--- a/src/doML.ipynb
+++ b/src/doML.ipynb
@@ -36,35 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Too many dimensions: 3 > 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m DO_PCA \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m \u001b[39m#データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\u001b[39;00m\n\u001b[0;32m     10\u001b[0m randomstate \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m#学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m ML \u001b[39m=\u001b[39m MLs\u001b[39m.\u001b[39mML(TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA,randomstate\u001b[39m=\u001b[39mrandomstate)\n",
-      "File \u001b[1;32mc:\\Users\\TsugiKawa\\Desktop\\research_kawa\\src\\mymodule\\MLs.py:69\u001b[0m, in \u001b[0;36mML.__init__\u001b[1;34m(self, TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA, dilute, randomstate)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[39mif\u001b[39;00m dilute:\n\u001b[0;32m     68\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdilute()\n\u001b[1;32m---> 69\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mload_data()\n\u001b[0;32m     70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexePCA()\n",
-      "File \u001b[1;32mc:\\Users\\TsugiKawa\\Desktop\\research_kawa\\src\\mymodule\\MLs.py:151\u001b[0m, in \u001b[0;36mML.load_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    148\u001b[0m     \u001b[39mreturn\u001b[39;00m ((img_resize \u001b[39m-\u001b[39m \u001b[39mmin\u001b[39m(img_resize\u001b[39m.\u001b[39mflat)) \u001b[39m/\u001b[39m \u001b[39mmax\u001b[39m(img_resize\u001b[39m.\u001b[39mflat))\u001b[39m.\u001b[39mflat \u001b[39m# 正規化\u001b[39;00m\n\u001b[0;32m    150\u001b[0m \u001b[39mfor\u001b[39;00m item \u001b[39min\u001b[39;00m path_list:\n\u001b[1;32m--> 151\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX_train[i_count,:] \u001b[39m=\u001b[39m load_regularize(item)\n\u001b[0;32m    152\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my_train[i_count] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m \u001b[39m# リコネクションがないことを表すラベル\u001b[39;00m\n\u001b[0;32m    153\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpath_train[i_count] \u001b[39m=\u001b[39m item\n",
-      "File \u001b[1;32mc:\\Users\\TsugiKawa\\Desktop\\research_kawa\\src\\mymodule\\MLs.py:147\u001b[0m, in \u001b[0;36mML.load_data.<locals>.load_regularize\u001b[1;34m(item)\u001b[0m\n\u001b[0;32m    145\u001b[0m     im \u001b[39m=\u001b[39m mf\u001b[39m.\u001b[39mload(item, z\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[0;32m    146\u001b[0m \u001b[39m# img_resize = compress(im)\u001b[39;00m\n\u001b[1;32m--> 147\u001b[0m img_resize \u001b[39m=\u001b[39m mf\u001b[39m.\u001b[39;49mresize(im, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mIMGSHAPE)\n\u001b[0;32m    148\u001b[0m \u001b[39mreturn\u001b[39;00m ((img_resize \u001b[39m-\u001b[39m \u001b[39mmin\u001b[39m(img_resize\u001b[39m.\u001b[39mflat)) \u001b[39m/\u001b[39m \u001b[39mmax\u001b[39m(img_resize\u001b[39m.\u001b[39mflat))\u001b[39m.\u001b[39mflat\n",
-      "File \u001b[1;32mc:\\Users\\TsugiKawa\\Desktop\\research_kawa\\src\\mymodule\\myfunc.py:312\u001b[0m, in \u001b[0;36mresize\u001b[1;34m(array, yx)\u001b[0m\n\u001b[0;32m    310\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlist\u001b[39m(array\u001b[39m.\u001b[39mshape) \u001b[39m==\u001b[39m \u001b[39mlist\u001b[39m(yx):\n\u001b[0;32m    311\u001b[0m     \u001b[39mreturn\u001b[39;00m array\n\u001b[1;32m--> 312\u001b[0m im \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39;49mfromarray(array, mode\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mL\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    313\u001b[0m im \u001b[39m=\u001b[39m im\u001b[39m.\u001b[39mresize([yx[\u001b[39m0\u001b[39m], yx[\u001b[39m1\u001b[39m]], resample\u001b[39m=\u001b[39mImage\u001b[39m.\u001b[39mLANCZOS)\u001b[39m#######\u001b[39;00m\n\u001b[0;32m    314\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39marray(im)\n",
-      "File \u001b[1;32mc:\\Users\\TsugiKawa\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\PIL\\Image.py:2965\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   2963\u001b[0m     ndmax \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m   2964\u001b[0m \u001b[39mif\u001b[39;00m ndim \u001b[39m>\u001b[39m ndmax:\n\u001b[1;32m-> 2965\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many dimensions: \u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m > \u001b[39m\u001b[39m{\u001b[39;00mndmax\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   2967\u001b[0m size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m ndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m shape[\u001b[39m1\u001b[39m], shape[\u001b[39m0\u001b[39m]\n\u001b[0;32m   2968\u001b[0m \u001b[39mif\u001b[39;00m strides \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mValueError\u001b[0m: Too many dimensions: 3 > 2."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCA 非実施\n"
      ]
     }
    ],
    "source": [
-    "TARGET = \"mag_tupledxy\" #ALTIMAGES等のディレクトリにくっつけます\n",
+    "TARGET = \"energy\" #ALTIMAGES等のディレクトリにくっつけます\n",
     "#それぞれ1番最後の'/'は忘れずつけること\n",
     "ALTIMAGES0 = root_dir + \"imgout/0117_not/\"#リコネクションなし分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
     "ALTIMAGES1 = root_dir + \"imgout/0117_1X/\"#リコネクションあり分割済データフォルダ.makesepnpy.ipynbであらかじめ分割データを入れておく\n",
     "LABEL_SOURCE0 = root_dir + \"txt/labels0/\"#リコネクションありのラベリングcsvのあるフォルダ\n",
     "LABEL_SOURCE1 = root_dir + \"txt/labels1X/\"#リコネクションなしのラベリングcsvのあるフォルダ\n",
-    "# IMGSHAPE = [10,100]#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
-    "IMGSHAPE = [10,100,2]\n",
+    "IMGSHAPE = [10,100]#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
+    "# IMGSHAPE = [10,200]\n",
     "DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
     "randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
     "\n",
@@ -209,30 +200,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train : 0.9988993710691824\n",
-      "Test : 0.9974433893352812\n",
-      "[1 0 0 ... 1 1 1]\n",
+      "Train : 0.9012730579371265\n",
+      "Test : 0.8874132206459402\n",
+      "[1. 0. 0. ... 1. 1. 1.]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.99      1.00      1.00       735\n",
-      "         1.0       1.00      1.00      1.00      2003\n",
+      "         0.0       0.86      0.74      0.79       967\n",
+      "         1.0       0.90      0.95      0.92      2346\n",
       "\n",
-      "    accuracy                           1.00      2738\n",
-      "   macro avg       1.00      1.00      1.00      2738\n",
-      "weighted avg       1.00      1.00      1.00      2738\n",
+      "    accuracy                           0.89      3313\n",
+      "   macro avg       0.88      0.84      0.86      3313\n",
+      "weighted avg       0.89      0.89      0.88      3313\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\TsugiKawa\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\svm\\_base.py:1225: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "model = ML.XGBoost()  "
+    "# model = ML.XGBoost()  \n",
+    "a = ML.linearSVC()"
    ]
   },
   {
