ml output changed, trimed im maker

--- a/src/doML.ipynb
+++ b/src/doML.ipynb
@@ -1968,13 +1968,17 @@
     "            file.close()\n",
     "            print(\"model_\" + target + \"_\" + tag + \"_\" + methodname+\"\\n\")\n",
     "            print(\"------------------\\n\\n\\n\\n\")\n",
-    "        model = ML.linearSVC()   \n",
+    "        model = ML.linearSVC()\n",
+    "        print(model[2])\n",
     "        savemodel(model, \"linearSVC\")\n",
     "        model = ML.kneighbors()\n",
+    "        print(model[2])\n",
     "        savemodel(model, \"kneighbors\")\n",
     "        model = ML.rbfSVC()\n",
+    "        print(model[2])\n",
     "        savemodel(model, \"rbfSVC\")\n",
     "        model = ML.XGBoost()\n",
+    "        print(model[2])\n",
     "        savemodel(model, \"XGBoost\")"
    ]
   },
